# ft_turing

./: .gitignore  Makefile  README.md  dune-project  ft_turing.opam  test.json
compiler/: linker.py  main.py  yo.json
lib/: dune  instructions.ml  instructions.mli  machine.ml  machine.mli  tape.ml  tape.mli  turing.ml  util.ml
programs/: 02n.json  0n1n.json  move_right.json  palindrom.json  unary_add.json  utm.json  utm_input.txt
programs/inception/: action_A1.json  global.json  inception.json  main.json  new_cmd.json  saving_A+.json  saving_A1.json  saving_A=.json  saving_B1.json
programs/to_join/: action_A+.json  action_A..json  action_A1.json  action_A=.json  action_B+.json  action_B..json  action_B1.json  action_B=.json  main.json  main.py  new_cmd.json  saving_A+.json  saving_A..json  saving_A1.json  saving_A=.json  saving_B+.json  saving_B..json  saving_B1.json  saving_B=.json
programs/to_preprocess/: move_star_left.json  move_star_right.json
